syntax = "proto2";

message InputState {
    required bool   accelerate = 1;
    required bool   brake      = 2;
    required bool   item       = 3;
    required bool   drift      = 4;
    required bool   brakeDrift = 5;
    required uint32 stickX     = 6;
    required uint32 stickY     = 7;
    required uint32 trick      = 8;
}

message RaceClientFrame {
    message Player {
        required InputState inputState = 1;
    }

    required uint32 id      = 1;
    repeated Player players = 2;
}

message RaceServerFrame {
    message Vec3 {
        required float x = 1;
        required float y = 2;
        required float z = 3;
    }

    message Quat {
        required float x = 1;
        required float y = 2;
        required float z = 3;
        required float w = 4;
    }

    message Player {
        required InputState inputState  = 1;
        required Vec3       pos         = 2;
        required Quat       mainRot     = 3;
    }

    required uint32 id       = 1;
    required uint32 clientId = 2;
    repeated Player players  = 3;
}
